--- a/text10.html
+++ b/text10.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>It修真院首页</title>
     <link href="base/bootstrap.min.css" rel="stylesheet">
     <link href="test10.css" rel="stylesheet">
     <script src="base/html5shiv.js"></script>
