--- a/text10.html
+++ b/text10.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>It修真院首页</title>
     <link href="base/bootstrap.min.css" rel="stylesheet">
+    <link href="base.css" rel="stylesheet" type="text/css">
     <link href="test10.css" rel="stylesheet">
     <script src="base/html5shiv.js"></script>
     <script src="base/respond.js"></script>
@@ -299,7 +300,7 @@
                     <span><a href="#">葡萄藤轻游戏</a>&nbsp &nbsp</span>
                     <span><a href="#"> 桌游游戏 </a></span>
                 </div>
-                <div class=" text-right col-lg-4  col-md-4  col-ms-4  col-xs-12 ">
+                <div class=" text-left col-lg-4  col-md-4  col-ms-4  col-xs-12 ">
                     <p>微信公众平台</p>
                     <img src="技能树首页---二维码.jpg">
                 </div>
