--- a/text10.html
+++ b/text10.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div class="wrap ">
+    <!--*****************************************top*************************************************-->
     <div class="top  container row">
         <div class="col-lg-6 col-md-6 col-xs-6 text-left">
             <p>客服热线：010-594-78634</p>
@@ -45,7 +46,8 @@
             </div>
     </div>
     </div>
-   <div class="carou">
+    <!--**********************************carousel**************************************************-->
+    <div class="carou">
         <div id="example" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#example" data-slide-to="0" class="active"></li>
@@ -85,7 +87,8 @@
             </a>
         </div>
     </div>
-    <div class="mainbody container">
+    <!--***********************************mainbody***************************************************-->
+     <div class="mainbody container">
         <div class="gaoxiao container text-center row  ">
             <div class="  col-lg-3 col-md-3 col-sm-3 ">
                 <img src="技能树首页---高效2.png">
@@ -93,13 +96,11 @@
                  <small>将五到七年的成长时间，缩短
                      到一年到三年。</small>
             </div>
-            <!--*****************************************************-->
             <div class="col-lg-3 col-md-3 col-sm-3 ">
                 <img src="技能树首页---书籍2.png">
                 <h4>规范</h4>
                 <small>标准的实战教程，不会走弯路</small>
             </div>
-            <!--*********************************************************-->
             <div class="  col-lg-3 col-md-3 col-sm-3 ">
                 <img src="技能树首页---人脉2.png">
                 <h4>人脉</h4>
@@ -107,7 +108,6 @@
                     入学就混入职脉圈，为以后铺平
                     道路。</small>
             </div>
-            <!--*********************************************************-->
             <div class=" sss text-left col-lg-3 col-md-3 col-sm-3 ">
                 <img src="技能树首页---头像.png">
                 <span>12400</span>
@@ -119,6 +119,7 @@
                 <h4>学员已经找到满意工作</h4>
             </div>
         </div>
+        <!--*****************************************************-->
         <h4 class="study text-center">如何学习</h4>
         <div class="learn container text-center row  ">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
@@ -126,50 +127,52 @@
                 <span class="text-style">匹配你现在的个人情况寻找适合自己的岗位</span>
                 <img src="技能树首页---绿色.png">
             </div>
-            <!--*****************************************************-->
+            <!--***-->
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">2</div>
                 <span>了解职业前景薪金待遇、竞争压力等</span>
                 <img src="技能树首页---绿色.png">
             </div>
-            <!--*********************************************************-->
+            <!--***-->
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">3</div>
                 <span>掌握行业内顶级技能</span>
                 <img src="技能树首页---绿色.png">
             </div>
-            <!--*********************************************************-->
+            <!--***-->
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">4</div>
                 <span>查看职业目标任务</span>
                 <img src="技能树首页---绿色.png">
             </div>
         </div>
+
         <div class="learn container text-center row  ">
             <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">5</div>
                 <span>参考学习资源，掌握技能点，逐个完成任务</span>
                 <img src="技能树首页---绿色.png">
             </div>
-            <!--*****************************************************-->
+            <!--***-->
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">6</div>
                 <span>加入班级，和小伙伴们互帮互助，一块学习</span>
                 <img src="技能树首页---绿色.png">
             </div>
-            <!--*********************************************************-->
+            <!--***-->
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">7</div>
                 <span>选择导师，一路引导，加速自己成长</span>
                 <img src="技能树首页---绿色.png">
             </div>
-            <!--*********************************************************-->
+            <!--***-->
             <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12 center-block ">
                 <div class="circle1">8</div>
                 <span>完成职业技能，升级业界大牛</span>
                 <img src="技能树首页---绿色.png">
             </div>
         </div>
+        <!--*****************************************************-->
         <h4 class="student text-center">优秀学员展示</h4>
         <div class=" student container text-center row">
             <div class=" col-lg-3 col-md-3   col-sm-6 col-xs-12">
@@ -180,42 +183,46 @@
                         服务领域，从事虚拟主机、
                         云服务器、域名。曾任新网
                         高级技术经理，负责技术研
-                        发、团队管理与建设。</small>
+                        发、团队管理与建设。
+                    </small>
                 </div>
            </div>
             <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="student1 text-center">
-                <img src="技能树首页---头像2.png">
-                <h4>技术顾问：罗大佑</h4>
-                <small>百度技术总监：互联网基础
-                    服务领域，从事虚拟主机、
-                    云服务器、域名。曾任新网
-                    高级技术经理，负责技术研
-                    发、团队管理与建设。</small>
+                    <img src="技能树首页---头像2.png">
+                    <h4>技术顾问：罗大佑</h4>
+                    <small>百度技术总监：互联网基础
+                        服务领域，从事虚拟主机、
+                        云服务器、域名。曾任新网
+                        高级技术经理，负责技术研
+                        发、团队管理与建设。
+                    </small>
+                 </div>
             </div>
-                </div>
             <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="student1">
-                <img src="技能树首页---头像3.png">
-                <h4>技术顾问：罗大佑</h4>
-                <small>百度技术总监：互联网基础
-                    服务领域，从事虚拟主机、
-                    云服务器、域名。曾任新网
-                    高级技术经理，负责技术研
-                    发、团队管理与建设。</small>
-            </div>
+                    <img src="技能树首页---头像3.png">
+                    <h4>技术顾问：罗大佑</h4>
+                    <small>百度技术总监：互联网基础
+                        服务领域，从事虚拟主机、
+                        云服务器、域名。曾任新网
+                        高级技术经理，负责技术研
+                        发、团队管理与建设。
+                    </small>
                 </div>
+            </div>
             <div class=" col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="student1">
-                <img src="技能树首页---头像4.png">
-                <h4>技术顾问：罗大佑</h4>
-                <small>百度技术总监：互联网基础
-                    服务领域，从事虚拟主机、
-                    云服务器、域名。曾任新网
-                    高级技术经理，负责技术研
-                    发、团队管理与建设。</small>
-            </div>
+                    <img src="技能树首页---头像4.png">
+                    <h4>技术顾问：罗大佑</h4>
+                    <small>百度技术总监：互联网基础
+                        服务领域，从事虚拟主机、
+                        云服务器、域名。曾任新网
+                        高级技术经理，负责技术研
+                        发、团队管理与建设。
+                    </small>
                 </div>
+            </div>
         </div>
         <div class=" little-circle  text-center">
             <a href="#"><div class="circle2 abs"></div></a>
@@ -223,6 +230,7 @@
             <a href="#"><div class="circle2"></div></a>
             <a href="#"><div class="circle2"></div></a>
         </div>
+        <!--*****************************************************-->
         <h4 class="company text-center">战略合作企业</h4>
         <div class="company text-center container row">
             <div class="col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-ms-2 col-ms-offset-1 col-xs-2 col-xs-offset-1">
@@ -251,10 +259,8 @@
                 </div>
             </div>
         </div>
-
     </div>
-
-
+    <!--************************************footer***********************************************-->
     <div class="footer container-fluid ">
         <div class="link  container-fluid row">
             <div class="text-center col-lg-12  col-md-12  col-ms-12  col-xs-12 ">
@@ -269,7 +275,7 @@
                     <li><a href="#">手机软件</a></li>
                     <li><a href="#">手机软件</a></li>
                     <li><a href="#">手机软件</a></li>
-                    <br />
+                    <P></P>
                     <li><a href="#">手机软件</a></li>
                     <li><a href="#">手机软件</a></li>
                     <li><a href="#">手机软件</a></li>
@@ -283,6 +289,7 @@
                 </ul>
             </div>
         </div>
+/*******************************************footer**********************************************/
         <div class="footers row container-fluid">
             <div class="container">
                 <div class=" col-lg-4  col-md-4  col-ms-4  col-xs-12 ">
