--- a/text10职业介绍.html
+++ b/text10职业介绍.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div class="wrap ">
+    <!--*****************************************top*************************************************-->
     <div class="top  container row">
         <div class="col-lg-6 col-md-6 col-xs-6 text-left">
             <p>客服热线：010-594-78634</p>
@@ -45,6 +46,8 @@
             </div>
         </div>
     </div>
+    <div class="mainbody"></div>
+    <!--************************************footer***********************************************-->
 <div class="footer container-fluid ">
     <div class="link  container-fluid row">
         <div class="text-center col-lg-12  col-md-12  col-ms-12  col-xs-12 ">
