--- a/text10职业介绍.html
+++ b/text10职业介绍.html
@@ -46,9 +46,194 @@
             </div>
         </div>
     </div>
-    <div class="mainbody"></div>
+    <!--*****************************************mainbody*************************************************-->
+    <div class="mainbody container">
+        <div class=" container nav2">
+            <h4><a href="text10职业介绍.html">首页></a><span>职业</span></h4>
+             <ul class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left">
+                 <li><p>方向：</p></li>
+                 <li><a class="active" href="#">全部</a></li>
+                 <li><a href="#">前段开发</a></li>
+                 <li><a href="#">后端开发</a></li>
+                 <li><a href="#">移动开发</a></li>
+                 <li><a href="#">整站开发</a></li>
+                 <li><a href="#">运营维护</a></li>
+             </ul>
+        </div>
+        <div class="content container text-center row ">
+            <h4 class="bit">前段开发方向</h4>
+            <div class=" container box col-lg-4  col-md-4 col-sm-6 col-xs-12">
+                <dl>
+                    <dt><img src="职位列表人物.png"></dt>
+                    <dd>
+                        <h3>Web前端工程师</h3>
+                        <p>Web前端开发工程师，主要职责是
+                            利用（X）HTML/CSS/JavaScript/
+                            flash等各种Web技术进行产品的开
+                            发。
+                        </p>
+                    </dd>
+                </dl>
+                <table class="table-style0 text-left ">
+                    <tr>
+                        <td><p>门槛</p><img src="职位列表--orangestart.png"></td>
+                        <td><p>难易程度</p><img src="职位列表---orangestart.png"><img src="职位列表--orangestart.png"></td>
+                    </tr>
+                    <tr>
+                        <td><p>成长周期</p><span>1-3</span>年</td>
+                        <td><p>稀缺程度</p><span>345</span>家公司需要</td>
+                    </tr>
+                </table>
+                <table class="table-style1">
+                        <tr >
+                            <td rowspan="3"><p>薪资待遇</p></td>
+                            <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                        </tr>
+                        <tr>
+                            <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                        </tr>
+                        <tr>
+                            <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                        </tr>
+                    </table>
+                <table class="table-style2">
+                    <tr>
+                        <td>
+                            <strong>有<span>286</span>人在学</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>提示：在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</p>
+                        </td>
+                    </tr>
+                </table>
+                <div class="show">
+                    <h3>ios工程师</h3>
+                    <p>iOS是由苹果公司开发的移动操作统，iOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，因此同样属
+                        于类Unix的商业操作系统。国内iOS开
+                        发起步相对较晚，人才培养机制更是远
+                        远跟不上市场发展速度。有限的iOS开
+                        发人才成了国内企业必争的资源。国内  iOS开发起步相对较晚，人才培养机制
+                        更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源</p>
+                </div>
+            </div>
+            <div class=" container box col-lg-4  col-md-4 col-sm-6 col-xs-12">
+                <dl>
+                    <dt><img src="职位列表人物.png"></dt>
+                    <dd>
+                        <h3>Web前端工程师</h3>
+                        <p>Web前端开发工程师，主要职责是
+                            利用（X）HTML/CSS/JavaScript/
+                            flash等各种Web技术进行产品的开
+                            发。
+                        </p>
+                    </dd>
+                </dl>
+                <table class="table-style0 text-left">
+                    <tr>
+                        <td><p>门槛</p><img src="职位列表--orangestart.png"></td>
+                        <td><p>难易程度</p><img src="职位列表---orangestart.png"><img src="职位列表--orangestart.png"></td>
+                    </tr>
+                    <tr>
+                        <td><p>成长周期</p><span>1-3</span>年</td>
+                        <td><p>稀缺程度</p><span>345</span>家公司需要</td>
+                    </tr>
+                </table>
+                <table class="table-style1">
+                    <tr >
+                        <td rowspan="3"><p>薪资待遇</p></td>
+                        <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                    </tr>
+                    <tr>
+                        <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                    </tr>
+                    <tr>
+                        <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                    </tr>
+                </table>
+                <table class="table-style2">
+                    <tr>
+                        <td>
+                            <strong>有<span>286</span>人在学</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>提示：在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</p>
+                        </td>
+                    </tr>
+                </table>
+                <div class="show">
+                    <h3>ios工程师</h3>
+                    <p>iOS是由苹果公司开发的移动操作统，iOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，因此同样属
+                        于类Unix的商业操作系统。国内iOS开
+                        发起步相对较晚，人才培养机制更是远
+                        远跟不上市场发展速度。有限的iOS开
+                        发人才成了国内企业必争的资源。国内  iOS开发起步相对较晚，人才培养机制
+                        更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源</p>
+                </div>
+            </div>
+            <div class=" container box col-lg-4  col-md-4 col-sm-6 col-xs-12">
+                <dl>
+                    <dt><img src="职位列表人物.png"></dt>
+                    <dd>
+                        <h3>Web前端工程师</h3>
+                        <p>Web前端开发工程师，主要职责是
+                            利用（X）HTML/CSS/JavaScript/
+                            flash等各种Web技术进行产品的开
+                            发。
+                        </p>
+                    </dd>
+                </dl>
+                <table class="table-style0 text-left">
+                    <tr>
+                        <td><p>门槛</p><img src="职位列表--orangestart.png"></td>
+                        <td><p>难易程度</p><img src="职位列表---orangestart.png"><img src="职位列表--orangestart.png"></td>
+                    </tr>
+                    <tr>
+                        <td><p>成长周期</p><span>1-3</span>年</td>
+                        <td><p>稀缺程度</p><span>345</span>家公司需要</td>
+                    </tr>
+                </table>
+                <table class="table-style1">
+                    <tr >
+                        <td rowspan="3"><p>薪资待遇</p></td>
+                        <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                    </tr>
+                    <tr>
+                        <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                    </tr>
+                    <tr>
+                        <td><strong>0-1年</strong> <b>5k-10k/月</b></td>
+                    </tr>
+                </table>
+                <table class="table-style2">
+                    <tr>
+                        <td>
+                            <strong>有<span>286</span>人在学</strong>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>提示：在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础</p>
+                        </td>
+                    </tr>
+                </table>
+                <div class="show">
+                    <h3>ios工程师</h3>
+                    <p>iOS是由苹果公司开发的移动操作统，iOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，因此同样属
+                        于类Unix的商业操作系统。国内iOS开
+                        发起步相对较晚，人才培养机制更是远
+                        远跟不上市场发展速度。有限的iOS开
+                        发人才成了国内企业必争的资源。国内  iOS开发起步相对较晚，人才培养机制
+                        更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!--************************************footer***********************************************-->
-<div class="footer container-fluid ">
+    <div class="footer container-fluid ">
     <div class="link  container-fluid row">
         <div class="text-center col-lg-12  col-md-12  col-ms-12  col-xs-12 ">
             <ul >
