--- a/text10.html
+++ b/text10.html
@@ -7,7 +7,7 @@
     <title>It修真院首页</title>
     <link href="base/bootstrap.min.css" rel="stylesheet">
     <link href="base.css" rel="stylesheet" type="text/css">
-    <link href="test10.css" rel="stylesheet">
+    <link href="tst10.css" rel="stylesheet">
     <script src="base/html5shiv.js"></script>
     <script src="base/respond.js"></script>
 </head>
