--- a/task12.html
+++ b/task12.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>定制箱</title>
     <link href="base/bootstrap.min.css" rel="stylesheet">
-    <link href="test12.css" rel="stylesheet">
+    <link href="task12.css" rel="stylesheet">
     <script src="base/html5shiv.js"></script>
     <script src="base/respond.js"></script>
 </head>
