--- a/task12.html
+++ b/task12.html
@@ -70,7 +70,7 @@
                 <label for="the-three">天地盖</label>
             </div>
         </div>
-        <div class="sel col-lg-1 col-md-1 col-ms-1 col-ms-12 text-right">
+        <div class=" col-lg-2 col-md-2 col-ms-2 col-ms-12 text-left">
             <label  >
                 <select>
                     <option>000</option>
@@ -129,7 +129,7 @@
                     </label>
                 </div>
             </div>
-            <div class="sel col-lg-1 col-md-1 col-ms-1 col-xs-12 text-right">
+            <div class="sel col-lg-2 col-md-2 col-ms-2 col-xs-12 text-left">
                 <label  >
                     <select>
                         <option>000</option>
@@ -166,7 +166,7 @@
                 <label for="the-ten">飞机箱</label>
             </div>
             </div>
-            <div class="sel col-lg-1 col-md-1 col-ms-1 col-xs-12 text-right">
+            <div class=" col-lg-2 col-md-2 col-ms-2 col-xs-12 text-left">
                 <label  >
                     <select>
                         <option>000</option>
